# extensions-opentelemetry

./: .gitignore  404.html  README.md  catcode.yaml  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: docs.yaml
config/: index.html
docs/: config.md  index.md
docs/test/: rest.md
extensions/opentelemetry/: __init__.py  config.py
search/: search_index.json
tests/: test_dummy.py
