[tool.poetry]
name = "extensions-opentelemetry"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"

packages = [
    {include = "extensions/opentelemetry"}
]

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"
extensions-configuration= { git = "https://github.com/MatiWall/extensions-configuration.git", branch = "main" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
