[tool.poetry]
name = "extensions-opentelemetry"
version = "0.2.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"

packages = [
    {include = "extensions/opentelemetry"}
]

[[tool.poetry.source]]
name = "private"
url = "http://pypi.mw.local"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"
extensions-configuration = "^0.2.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.6"
pytest = "^8.2.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true
